--- a/meteor/client/ui/Status/media-status/MediaStatusList.scss
+++ b/meteor/client/ui/Status/media-status/MediaStatusList.scss
@@ -7,6 +7,7 @@
 .media-status-table {
 	width: 100%;
 	width: -webkit-fill-available;
+	letter-spacing: 0;
 }
 
 .media-status-table-search {
